@@ -1,6 +1,8 @@
 Revision history for Perl extension App-Egaz
 
 {{$NEXT}}
+    - `egaz repeatmasker`
+        - Try hard to find rmOutToGFF3.pl
 
 0.1.3 2018-04-22T20:03:24Z
     - `egaz template`
